kubernetes/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tacticalrmm
  labels:
    app: tacticalrmm
