kubernetes/nlb.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tacticalrmm
  labels:
    app: tacticalrmm
    service: tactical-nlb
  name: tactical-nlb
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: "http"
      port: 80
    - name: "https"
      port: 443
    - name: "nats"
      port: 4222
  selector:
    service: tactical-nlb
